--- a/exercicios-logica/exercicios.html
+++ b/exercicios-logica/exercicios.html
@@ -4,6 +4,6 @@
   <title>Executando JavaScript</title>
 </head>
 <body>
-  <script src="md2-ex2.js"></script>
+  <script src="md3.ex3.js"></script>
 </body>
 </html>
