--- a/exercicios-logica2/index.html
+++ b/exercicios-logica2/index.html
@@ -17,6 +17,6 @@
         <button onclick="verificarSoma()" class="button">Soma</button>
     </main>
 
-      <script src="app.js".js"></script>
+      <script src="app.js"></script>
 </body>
 </html>
